--- a/ServerFiles/index.html
+++ b/ServerFiles/index.html
@@ -4,6 +4,7 @@
         <title>
             ESP32 Device Setup
         </title>
+<!--####################################################  CSS  ####################################################-->
         <style>
             body{
                 font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
@@ -38,15 +39,38 @@
 
         </style>
     </head>
+<!--####################################################  HTML  ####################################################-->
     <body>
         <h1>
             ESP32 Cam Controller - Home
         </h1>
         <div class="rowStyle">
-            <a href="deviceSetup.html" target="_self">Link to page 2</a>
+            <a href="deviceSetup.html" target="_self">--> Device setup! &lt--</a>
+            <div> 
+                <span id="keyCode"> KeyCode: </span>
+            </div>
         </div>
+<!--####################################################  JAVASCRIPT  ####################################################-->
         <script>
-
+            document.addEventListener('keydown', function(event) {
+                keyspan = document.getElementById("keyCode")
+                if(event.keyCode == 37) {
+                    keyspan.textContent="KeyCode: Left"
+                }
+                else if(event.keyCode == 38) {
+                    keyspan.textContent="KeyCode: Up"
+                }
+                else if(event.keyCode == 39) {
+                    keyspan.textContent="KeyCode: Right"
+                }
+                else if(event.keyCode == 40) {
+                    keyspan.textContent="KeyCode: Down"
+                }
+            });
+            document.addEventListener('keyup', function(event) {
+                keyspan = document.getElementById("keyCode")
+                keyspan.textContent="KeyCode:"
+            });
         </script>
     </body>    
 </html>
