Connection to Wifi with limitations possible
ESP connects to WiFi if credentials are stored. Connection is only Possible if ESP is on 192.168.0.174 (for now)

--- a/ServerFiles/deviceSetup.html
+++ b/ServerFiles/deviceSetup.html
@@ -313,7 +313,8 @@
             }
 
             //websocket connection
-            var url = "ws://192.168.4.1:1337/" // standard esp url 
+            var url = "ws://" + "192.168.0.174" + ":1337/" // retrieve ESP host name 
+            debuglog(window.location.origin)
             var output
             var context
             wsConnected = false     //Connection flag
