Static IP and mDNS
-static ip can be added in .ino file
-mDNS name can be added in .ino file

both will be implemented in the eeprom for easy editing (future)

--- a/ServerFiles/deviceSetup.html
+++ b/ServerFiles/deviceSetup.html
@@ -27,7 +27,7 @@
 
             .input{
                 display: flex;
-                flex-direction: column;
+                flex-direction: row;
                 gap: 10px;
                 width: 50%;
             }
@@ -210,9 +210,21 @@
                     </div>
 
                     <div>
-                        <button id="submitButton">Submit</button>
+                        <button id="submitButtonWiFi">Submit</button>
                     </div>
 
+                </div>
+            </div>
+
+            <div class="rowStyle">
+                <div class="rowStyle">
+                    <lable for="staticIP"> Static IP: </lable> 
+                    <input type="text" id="staticIP">
+                    <label for="mDNSname"> mDNS name: </label>
+                    <input type="text" id="mDNSname">
+                </div>
+                <div>
+                    <button id="submitButtonMeta">Submit</button>
                 </div>
             </div>
 
@@ -313,7 +325,9 @@
             }
 
             //websocket connection
-            var url = "ws://" + "192.168.0.174" + ":1337/" // retrieve ESP host name 
+            var hostIP = self.location.host
+            debuglog(self.location.host)
+            var url = "ws://" + hostIP + ":1337/" // retrieve ESP host name 
             debuglog(window.location.origin)
             var output
             var context
@@ -357,6 +371,7 @@
                         3: reboot ESP
                         4: rotate cam
                         5: get stepper position
+                        6: send Wifi mDNS and static ip
                 */
                 debuglog("Recieved: " + event.data)
                 payload = evt.data.split(":")
@@ -407,7 +422,6 @@
             window.addEventListener("load", wsStart, false)
 
 
-
             //Response Functions
             function updateWifiBox(content){
                 listbox = document.getElementById('listBox') 
@@ -442,6 +456,15 @@
                 debuglog("SSID: " + ssid + ", Pass: " + pass)
                 message += ssid + "," + pass
                 debuglog("Message: " + message)
+                wsSend(message)
+            }
+
+            function sendWifiMeta(){
+                message = "6:"
+                mDNS = document.getElementById("mDNSname").value
+                ip = document.getElementById("staticIP").value
+                debuglog("staticIP: " + ip + ", mDNS: " + mDNS)
+                message += ip + "," + mDNS
                 wsSend(message)
             }
 
@@ -571,8 +594,17 @@
                 }
             }   
 
-            const submitButton = document.getElementById("submitButton")
-            submitButton.onclick = (event) =>{
+            
+
+            const submitButtonMeta = document.getElementById("submitButtonMeta")
+            submitButtonMeta.onclick = (event) =>{
+                if (wsConnected){
+                    sendWifiMeta()
+                } 
+            }
+
+            const submitButtonWifi = document.getElementById("submitButtonWiFi")
+            submitButtonWifi.onclick = (event) =>{
                 if (wsConnected){
                     sendWifiCredentials()
                 } 
